--- a/play2.yaml
+++ b/play2.yaml
@@ -5,3 +5,12 @@
   tasks:
    - name: install apache in slave2
      apt: name=apache2 state=latest
+     - name: Start Apache server
+      service:
+        name: httpd
+        state: started
+        enabled: True
+    - name: Deploy static website
+      copy:
+        src: index.html
+        dest: /var/www/html/
